src/test/deca/syntax/invalid/include-twoMainsBecauseInclude.deca
{
    #include "includeFile-withMain.decah"
    print(thereAreTwoMains);
}